--- a/SchoolMedicalWpf.App/Admin/CreateUpdateAccount.xaml
+++ b/SchoolMedicalWpf.App/Admin/CreateUpdateAccount.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Create/Update Account" Height="598" Width="820"
         Background="{StaticResource PrimaryBlueBrush}"
-        WindowStartupLocation="CenterOwner"
+        WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
