--- a/SchoolMedicalWpf.App/Admin/CreateVaccinationWindow.xaml
+++ b/SchoolMedicalWpf.App/Admin/CreateVaccinationWindow.xaml
@@ -105,7 +105,7 @@
 
                 <!-- Auto Generate -->
                 <CheckBox x:Name="chkAutoGenerate" 
-                          Content="Tự động tạo kết quả tiêm cho học sinh"
+                          Content="Thêm sinh viên vào lịch tiêm chủng"
                           FontSize="14"
                           IsChecked="True"
                           Margin="0,10,0,0"/>
