--- a/SchoolMedicalWpf.App/Parent/MedicalRegistrationFormWindow.xaml
+++ b/SchoolMedicalWpf.App/Parent/MedicalRegistrationFormWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SchoolMedicalWpf.App.Parent.MedicalRegistrationFormWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Đăng ký lịch sử tiêm thuốc"
+        Title="Đăng ký lịch gửi thuốc"
         Height="790" Width="680"
         Background="{DynamicResource BackgroundWhiteBrush}"
         WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
@@ -53,7 +53,7 @@
 
                 <!-- Đồng ý phụ huynh -->
                 <CheckBox x:Name="ParentalConsentCheckBox" 
-                    Content="Tôi xác nhận đã đồng ý cho con tiêm thuốc" 
+                    Content="Tôi xác nhận đã đồng ý gửi thuốc" 
                     IsChecked="{Binding ParentalConsent}"
                     FontSize="14"
                     Foreground="{StaticResource PrimaryBlueBrush}"
